# TalentMatch

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_CN.md  env.example  pyproject.toml
backend/: __init__.py
backend/resume_management/recommendation/: recommendation_output_generator.py  recommendation_reason_generator.py  recommendation_requirements.py  recommendation_state.py  resume_recommender.py  resume_scorer.py  resume_search_strategy.py
backend/resume_management/storage/: mysql_base.py  resume_repository.py  resume_vector_storage.py
data/config/: collections_config.json
frontend/: app.py  ui_components.py
frontend/page/: resume_recommendation.py
scripts/: import_resume_data.py  init_project.py
utils/: __init__.py
utils/ai/: __init__.py  embedding_client.py  langfuse_client.py  llm_client.py
utils/config/: __init__.py  env_loader.py
utils/core/: __init__.py  exceptions.py  logging.py
utils/database/: __init__.py  connections.py  vector_db.py
